--- a/src/app/coursework-detail/coursework-detail.component.scss
+++ b/src/app/coursework-detail/coursework-detail.component.scss
@@ -4,6 +4,7 @@
     float: left;
     text-align: justify;
     margin-left: 50px;
+    margin-top: 50px;
     line-height: 2em;
     // margin: 20px;
     // padding: 20px;
@@ -15,6 +16,7 @@
     float: right;
     text-align: justify;
     margin-right: 10px;
+    margin-top: 50px;
 }
 
 
