--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -47,4 +47,8 @@
       </div>
     </div> -->
   </section>
+  
+  <!-- <blockquote>
+    The best way to get things done is to simply begin.
+  </blockquote> -->
 </main>
