changes for color

--- a/src/app/recent/recent.component.html
+++ b/src/app/recent/recent.component.html
@@ -1,4 +1,4 @@
-<article>          
+<section>          
     <ul>
       <li *ngFor="let recentstructure of recents">
         <div class="thumbnail">
@@ -11,7 +11,7 @@
         </div>
       </li>
     </ul>
-</article>
+</section>
  
     
 
