--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
 // $font-stack: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 $font-stack: 'Comic Sans MS','Chiller',Verdana;
 $primary-color: rgb(0, 0, 0);
-$color_one: #50faab;
+$color_one: rgb(31, 230, 164);
 $color_two: #fff;
 
 html{
