--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,6 +11,8 @@ $color_two: #fff;
     position: fixed;
     width: 100%;
     // margin-top: 100px;
+    background-color: rgb(0, 0, 0);
+    z-index: 1;
 }
 
 .maincontent{
@@ -60,7 +62,7 @@ nav {
         // max-width: 50%;
         // flex-direction: column;
         // margin: auto;
-        display: inline-flex;
+        display: inline-table;
         // position: absolute;
 
     }
