--- a/src/app/coursework-detail/coursework-detail.component.scss
+++ b/src/app/coursework-detail/coursework-detail.component.scss
@@ -1,3 +1,14 @@
+main {
+	position: relative;
+	overflow: hidden;
+	border: 1px solid rgba(255,255,255,.3);
+	margin: 10px;
+	padding: 10px;
+	background: rgba(255,255,255,.1);
+	background: linear-gradient( rgba(255,255,255,.3), rgba(255,255,255,.07) 15% );
+	border-radius: 5px;
+}
+
 .main{
     flex: 50%; 
     max-width: 50%;
