--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,5 @@
-$color_two: #fff;
+// $color_two: rgb(27, 177, 169);
+$color_two: rgb(255, 255, 255);
 
 .content{
     display: flex;
@@ -11,7 +12,7 @@ $color_two: #fff;
     position: fixed;
     width: 100%;
     // margin-top: 100px;
-    background-color: rgb(0, 0, 0);
+    background-color: #10437d;
     z-index: 1;
 }
 
@@ -33,8 +34,8 @@ nav {
         text-decoration: none !important;
         margin: 1em;
         display: inline-block;
-        color: rgb(0, 0, 0);
-        font-weight: 300;
+        color: rgb(148, 28, 74);
+        font-weight: 800;
         // font-family: cursive;
         font-family: 'Comic Sans MS','Chiller',Verdana;  
         font-size: 16px;
@@ -43,12 +44,14 @@ nav {
       }
   
     a:hover {
-      color: $color_two;
+      color: $color_two; 
     }
   
     a.active {
     color: $color_two;
     }
+
+    
   
   }
 
