changes for color

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,7 +12,7 @@ $color_two: rgb(255, 255, 255);
     position: fixed;
     width: 100%;
     // margin-top: 100px;
-    background-color: #10437d;
+    background-color: #2846b8;
     z-index: 1;
 }
 
@@ -34,8 +34,8 @@ nav {
         text-decoration: none !important;
         margin: 1em;
         display: inline-block;
-        color: rgb(148, 28, 74);
-        font-weight: 800;
+        color: rgb(0, 0, 0);
+        font-weight: 300;
         // font-family: cursive;
         font-family: 'Comic Sans MS','Chiller',Verdana;  
         font-size: 16px;
