--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
 // $font-stack: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 $font-stack: 'Comic Sans MS','Chiller',Verdana;
 $primary-color: rgb(0, 0, 0);
-$color_one: #28cb28;
+$color_one: #1fe6a4;
 $color_two: #fff;
 
 html{
