changes for logo

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,8 +65,8 @@ a.logo{
   display:inline-block;
   width: 200px;
   height: 40px;
-  background: url(assets/logo.png) no-repeat 0 0;
-  background-size: contain;
+  // background: url(assets/logo.png) no-repeat 0 0;
+  // background-size: contain;
   position: fixed; 
   // top: 30px; left: 45px;
 }
