lot of style changes

--- a/src/app/coursework-detail/coursework-detail.component.html
+++ b/src/app/coursework-detail/coursework-detail.component.html
@@ -3,7 +3,10 @@
         <h4>{{coursework.title}}</h4>
         <h5>{{coursework.coursename}}</h5>
         <p class="description">{{coursework.description}}</p>
-        <strong><a href="{{coursework.githuburl}}" target="_blank">{{coursework.githuburl}}</a></strong>
+        <p class="breakword">
+            <strong><a href="{{coursework.githuburl}}" target="_blank">{{coursework.githuburl}}</a></strong>
+        </p>
+
         <br><br>
     </article>
     <aside class="sideimage">
