--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <section class="homedesc">
     <h4>
       Leejia James <br><br>
-      Web UI Development | Data Science | Machine Learning
+      Web Development | Front End Development (Web) | Data Science | Machine Learning
     </h4>
     <p>
       <br> 
@@ -13,42 +13,5 @@
       Fall 17 and Spring 18: Instructor, CS Outreach Program, The University of Texas at Dallas <br>
       Aug 2011 thru Jan 2017: Technology Analyst, Infosys Limited, India - Mainframe Developer, Web UI Developer, Educator
     </p>
-  
-    <!-- <div class="row">
-      <div class="col-md-4">
-        <div class="thumbnail">
-          <a href="assets/Chrysanthemum.jpg" target="_blank">
-            <img src="assets/Chrysanthemum.jpg" alt="courseworkimage" style="width:75%">
-            <div class="caption">
-              <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="thumbnail">
-          <a href="assets/Hydrangeas.jpg" target="_blank">
-            <img src="assets/Hydrangeas.jpg" alt="Nature" style="width:75%">
-            <div class="caption">
-              <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="thumbnail">
-          <a href="assets/Tulips.jpg" target="_blank">
-            <img src="assets/Tulips.jpg" alt="Fjords" style="width:75%">
-            <div class="caption">
-              <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
-            </div>
-          </a>
-        </div>
-      </div>
-    </div> -->
   </section>
-  
-  <!-- <blockquote>
-    The best way to get things done is to simply begin.
-  </blockquote> -->
 </main>
