--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,7 @@ body {
   font-size: 15px !important;
   background: linear-gradient(to bottom right, #28cb28,#2838c8);
   background-attachment: fixed;
+	text-align: justify;
 }
 
 
