--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -7,7 +7,7 @@
 
   
 a{  
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   text-decoration: underline;
 }
 
@@ -15,9 +15,9 @@ main {
 	position: relative;
 	overflow: hidden;
 	border: 1px solid rgba(255,255,255,.3);
-	margin: 10px;
+	margin: 30px;
 	padding: 10px;
-	background: rgba(255,255,255,.1);
-	background: linear-gradient( rgba(255,255,255,.3), rgba(255,255,255,.07) 15% );
-	border-radius: 5px;
+	color: black;
+	background: #9ef2f5;
+	border-radius: 25px;
 }
