--- a/src/app/coursework-detail/coursework-detail.component.scss
+++ b/src/app/coursework-detail/coursework-detail.component.scss
@@ -2,11 +2,10 @@ main {
 	position: relative;
 	overflow: hidden;
 	border: 1px solid rgba(255,255,255,.3);
-	margin: 10px;
+	margin: 30px;
 	padding: 10px;
-	background: rgba(255,255,255,.1);
-	background: linear-gradient( rgba(255,255,255,.3), rgba(255,255,255,.07) 15% );
-	border-radius: 5px;
+    background: #9ef2f5;
+	border-radius: 25px;
 }
 
 .main{
@@ -14,16 +13,14 @@ main {
     max-width: 50%;
     float: left;
     text-align: justify;
-    margin-left: 50px;
-    margin-top: 50px;
     line-height: 2em;
+    color: #000;
 }
 
 .sideimage {
     flex: 40%; 
     max-width: 40%;
     float: right;
-    text-align: justify;
     margin-right: 10px;
     margin-top: 50px;
 }
@@ -33,17 +30,11 @@ main {
     .main{
         flex: 100%; 
         max-width: 100%;
-        text-align: justify;
-        margin-left: 10px;
-        margin-right: 10px;
     }
     
     .sideimage {
         flex: 100%; 
         max-width: 100%;
-        text-align: justify;
-        margin-left: 10px;
-        margin-right: 10px;
     }
 }
 
@@ -52,6 +43,10 @@ main {
 }
 
 a{
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     text-decoration: underline;
   }
+
+.breakword{
+    word-wrap: break-word;
+}
