--- a/src/app/coursework/coursework.component.html
+++ b/src/app/coursework/coursework.component.html
@@ -2,14 +2,15 @@
     <ul>
       <li *ngFor="let courseworkstructure of courseworks">
         <div class="thumbnail">
-          <h4><span class="badge">{{courseworkstructure.id}}</span> {{courseworkstructure.title}}</h4>
+          <h4>{{courseworkstructure.title}}</h4>
           <a routerLink="/courseworkdetail/{{courseworkstructure.id}}" class="coursework"> 
             <img src={{courseworkstructure.imageurl1}} alt="courseworkimage">     
             <div class="caption">
               <p>{{courseworkstructure.title}}</p>
             </div>
             <span><em>Coursename: {{courseworkstructure.coursename}}</em></span>     
-            <p class="shortdesc">{{courseworkstructure.shortdescription}}</p>
+            <p class="shortdesc">{{courseworkstructure.shortdescription}} 
+              ... <br> <span class="readMore">>> Click here to read more >></span></p>
           </a>
         </div>
       </li>
