--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -13,11 +13,11 @@ $color_two: #fff;
     position: relative;
     overflow: hidden;
     border: 1px solid rgba(255,255,255,.3);
-    margin: 20px;
+    margin: 30px;
     padding: 10px;
-    background: rgba(255,255,255,.1);
-    background: linear-gradient( rgba(255,255,255,.3), rgba(255,255,255,.07) 15% );
-    border-radius: 5px;
+    color: black;
+    background: #9ef2f5;
+    border-radius: 25px;
   }
 
   blockquote {
