--- a/src/app/recent/recent.component.scss
+++ b/src/app/recent/recent.component.scss
@@ -8,13 +8,13 @@ ul li {
 }
 
 .thumbnail{
-  background-color: #e1fdff;
+  background-color: #9ef2f5;
   transition: background-color 0.25s ease;
   margin: 20px;
   padding: 20px;
   display: block; 
   line-height: 2em;
-  border: 2px solid #c4fdff;
+  border: 2px solid #9ef2f5;
   border-radius: 34px;
   color: #000;
 }
