--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <section class="homedesc">
     <h4>
       Leejia James <br><br>
-      Web Development | Front End Development (Web) | Data Science | Machine Learning
+      Web Development | Front End Development | Data Science | Machine Learning
     </h4>
     <p>
       <br> 
