style changes - making image responsive

--- a/src/app/coursework-detail/coursework-detail.component.scss
+++ b/src/app/coursework-detail/coursework-detail.component.scss
@@ -2,7 +2,7 @@ main {
 	position: relative;
 	overflow: hidden;
 	border: 1px solid rgba(255,255,255,.3);
-	margin: 30px;
+	margin: 5%;
 	padding: 10px;
     background: #9ef2f5;
 	border-radius: 25px;
@@ -35,6 +35,8 @@ main {
     .sideimage {
         flex: 100%; 
         max-width: 100%;
+        margin-right: 5px;
+        margin-top: 10px;
     }
 }
 
