home page style changes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,16 +2,22 @@
   <section class="homedesc">
     <h4>
       Leejia James <br><br>
-      Web Development | Front End Development | Data Science | Machine Learning
+      Web Development <br>
+      Front End Development <br>
+      Data Science <br>
+      Machine Learning
     </h4>
     <p>
       <br> 
       Master of Science <br>
       Computer Science <br>
       The University of Texas at Dallas (Fall 2017 - May 2019) <br><br>
-      Summer 18: User Interface Developer Intern, Trans American Information Systems <br>
-      Fall 17 and Spring 18: Instructor, CS Outreach Program, The University of Texas at Dallas <br>
-      Aug 2011 thru Jan 2017: Technology Analyst, Infosys Limited, India - Mainframe Developer, Web UI Developer, Educator
+      Summer 18: <br>
+      User Interface Developer Intern, Trans American Information Systems <br> <br>
+      Fall 17 and Spring 18: <br> 
+      Instructor, CS Outreach Program, The University of Texas at Dallas <br><br>
+      Aug 2011 thru Jan 2017: <br>
+      Technology Analyst, Infosys Limited, India - Mainframe Developer, Web UI Developer, Educator
     </p>
   </section>
 </main>
