making responsive and simple, removing images

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="content">
   <div class="sidenav">
-    <nav class="neon_text">
+    <nav>
       <a routerLink="/home">HOME</a>
       <a routerLink="/coursework">COURSEWORK</a>
-      <a routerLink="/recent">WORKSHOPS, ONLINE COURSES & OTHERS</a>
+      <a routerLink="/recent">OTHERS</a>
       <a routerLink="/about">ABOUT</a>
     </nav>
   </div>
