--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-$color_two: rgb(255, 255, 255);
+$color_two: rgb(255, 0, 0);
 
 .content{
     display: flex;
@@ -8,7 +8,7 @@ $color_two: rgb(255, 255, 255);
 .sidenav{
     position: fixed;
     width: 100%;
-    background-color: #2846b8;
+    background-color: #000000;
     z-index: 1;
 }
 
@@ -34,8 +34,7 @@ nav {
         width: 25%;
         text-align: center;
         border: 1px #fff dashed;
-        border-radius: 4em;
-        background-color: #3ebf79;
+        background-color: #ffffff;
       }
   
     a:hover {
@@ -70,6 +69,7 @@ nav {
     
     .maincontent{
         margin-left: 0;
+        margin-top: 2em;
     }
 }
 
