--- a/src/app/coursework-detail/coursework-detail.component.scss
+++ b/src/app/coursework-detail/coursework-detail.component.scss
@@ -1,43 +1,19 @@
 main {
 	position: relative;
 	overflow: hidden;
-	border: 1px solid rgba(255,255,255,.3);
+	border: 1px solid rgba(0, 0, 0, 0.3);
 	margin: 5%;
 	padding: 10px;
-    background: #9ef2f5;
 	border-radius: 25px;
 }
 
 .main{
-    flex: 50%; 
-    max-width: 50%;
+    flex: 100%; 
+    max-width: 100%;
     float: left;
     text-align: justify;
     line-height: 2em;
     color: #000;
-}
-
-.sideimage {
-    flex: 40%; 
-    max-width: 40%;
-    float: right;
-    margin-right: 10px;
-    margin-top: 50px;
-}
-
-
-@media (max-width: 768px) {
-    .main{
-        flex: 100%; 
-        max-width: 100%;
-    }
-    
-    .sideimage {
-        flex: 100%; 
-        max-width: 100%;
-        margin-right: 5px;
-        margin-top: 10px;
-    }
 }
 
 .description{
