--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -85,9 +85,10 @@ nav {
 
     nav {
         a {
-            font-size: .6em;
+            font-size: .8em;
             margin: .5em;
-            padding: .5em;
+            padding: 0;
+            height: 2em;
         }
     }
     
