margin and padding changes for smaller devices

--- a/src/app/coursework/coursework.component.scss
+++ b/src/app/coursework/coursework.component.scss
@@ -17,11 +17,6 @@ a.coursework > p {
     display: inline;
 }
 
-section {
-    margin: 10px 0 0 0;
-    padding: 10px;
-}
-
 ul li {
     list-style-type: none;
 }
@@ -41,7 +36,7 @@ img {
     padding: 20px;
     display: block; 
     line-height: 2em;
-    border: 2px solid #000000;
+    border: 2px solid #ffffff;
     border-radius: 34px;
     color: #000;
 }
