--- a/src/app/coursework-detail/coursework-detail.component.scss
+++ b/src/app/coursework-detail/coursework-detail.component.scss
@@ -1,7 +1,7 @@
 main {
 	position: relative;
 	overflow: hidden;
-	border: 1px solid rgba(0, 0, 0, 0.3);
+	border: 1px solid rgb(255, 255, 255);
 	margin: 5%;
 	padding: 10px;
 	border-radius: 25px;
