--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -61,7 +61,7 @@ nav {
 
     nav {
         a {
-            font-size: .7em;
+            font-size: 1em;
             margin: .5em;
             padding: .5em;
         }
@@ -85,10 +85,10 @@ nav {
 
     nav {
         a {
-            font-size: .8em;
+            font-size: .7em;
             margin: .5em;
-            padding: 0;
-            height: 2em;
+            padding: 1em 0 0 0;
+            height: 4em;
         }
     }
     
